--- a/#sources/index.html
+++ b/#sources/index.html
@@ -22,9 +22,134 @@
             <nav class="page__menu menu-page">
               <div class="menu-page__header">
                 <div class="menu-page__title">Каталог товаров</div>
-                <div class="menu-page__burger"></div>
+                <div class="menu-page__burger">
+                  <div class="menu-page__lines">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                  </div>
+                </div>
               </div>
-              <div class="menu-page__body"></div>
+              <div class="menu-page__body">
+                <ul class="menu-page__list">
+                  <li>
+                    <a
+                      href="#"
+                      data-item="0"
+                      class="menu-page__link menu-page__link--parent"
+                      >Беговые дорожки</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="#"
+                      data-item="1"
+                      class="menu-page__link menu-page__link--parent"
+                      >Эллиптические тренажеры</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#" class="menu-page__link">Велотренажеры</a>
+                  </li>
+                  <li>
+                    <a href="#" class="menu-page__link">Гребные тренажеры</a>
+                  </li>
+                  <li>
+                    <a href="#" class="menu-page__link">Вибромассажеры</a>
+                  </li>
+                  <li>
+                    <a
+                      href="#"
+                      data-item="2"
+                      class="menu-page__link menu-page__link--parent"
+                      >Теннисные столы</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#" class="menu-page__link">Баскетбол</a>
+                  </li>
+                  <li>
+                    <a href="#" class="menu-page__link menu-page__link--parent"
+                      >Массажные кресла</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="#"
+                      data-item="3"
+                      class="menu-page__link menu-page__link--parent"
+                      >Массажные столы</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#" data-item="4" class="menu-page__link"
+                      >Силовые тренажеры</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#" class="menu-page__link">Батуты</a>
+                  </li>
+                  <li>
+                    <a href="#" class="menu-page__link">Детские городки</a>
+                  </li>
+                  <li>
+                    <a href="#" class="menu-page__link">Дачная мебель</a>
+                  </li>
+                  <li>
+                    <a href="#" class="menu-page__link"
+                      >Уличные спортивные комплексы</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#" class="menu-page__link">Аксессуары</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="menu-page__submenu submenu-page">
+                <div class="submenu-page__item">
+                  <ul class="submenu-page__menu">
+                    <li>
+                      <a href="#" class="submenu-page__link">Всепогодный</a>
+                    </li>
+                    <li>
+                      <a href="#" class="submenu-page__link">Для помещений</a>
+                    </li>
+                    <li>
+                      <a href="#" class="submenu-page__link"
+                        >Профессиональный</a
+                      >
+                    </li>
+                    <li>
+                      <a href="#" class="submenu-page__link">Любительский</a>
+                    </li>
+                  </ul>
+                  <div class="submenu-page__product">
+                    <div class="item-product">
+                      <div class="item-product__labels">
+                        <div class="item-product__label">Товар дня</div>
+                      </div>
+                      <a href="#" class="item-product__image">
+                        <img src="./img/tns.jpg" alt="" />
+                      </a>
+                      <a href="#" class="item-product__description">
+                        Домашний теннисный стол
+                      </a>
+                      <a href="#" class="item-product__name">
+                        Donic Indoor Roller 800 Green
+                      </a>
+                      <div class="item-product__footer">
+                        <div class="item-product__old-price rub">64 990</div>
+                        <div class="item-product__bottom">
+                          <a href="#" class="item-product__add">
+                            <img src="./img/cart_g.png" alt="" />
+                          </a>
+                          <div class="item-product__price rub">64 990</div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </nav>
           </aside>
           <div class="page__content"></div>
