--- a/#sources/_footer.html
+++ b/#sources/_footer.html
@@ -1,1 +1,84 @@
-<footer class="footer"></footer>
+<footer class="footer">
+  <div class="footer__container _container">
+    <div class="footer__body">
+      <div class="footer__column">
+        <div class="footer__block block-footer">
+          <div class="block-footer__column">
+            <a href="#" class="logo-footer">
+              <img src="./img/flogo.png" alt="" />
+            </a>
+            <div class="block-footer__phones">
+              <p>
+                <a href="tel:84991234567" class="block-footer__phone">
+                  8-499-123-45-67
+                </a>
+              </p>
+              <p>
+                <a href="tel:88001234567" class="block-footer__phone">
+                  8-800-123-45-67
+                </a>
+              </p>
+            </div>
+          </div>
+          <div class="block-footer__column">
+            <div class="block-footer__delivery delivery-footer">
+              <div class="delivery-footer__title">
+                Доставка транспортными компаниями:
+              </div>
+              <div class="delivery-footer__items">
+                <div class="delivery-footer__item">
+                  <img src="./img/ship01.png" alt="" />
+                </div>
+                <div class="delivery-footer__item">
+                  <img src="./img/ship02.png" alt="" />
+                </div>
+                <div class="delivery-footer__item">
+                  <img src="./img/ship03.png" alt="" />
+                </div>
+                <div class="delivery-footer__item">
+                  <img src="./img/ship04.png" alt="" />
+                </div>
+                <div class="delivery-footer__item">
+                  <img src="./img/ship05.png" alt="" />
+                </div>
+                <div class="delivery-footer__item">
+                  <img src="./img/ship06.png" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="footer__payments">
+          <img src="./img/payment.png" alt="" />
+        </div>
+      </div>
+      <div class="footer__column">
+        <div class="footer__widgets widgets-footer">
+          <div class="widgets-footer__column">
+            <img src="./img/vgt.jpg" alt="" />
+          </div>
+          <div class="widgets-footer__column">
+            <img src="./img/vgt.jpg" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer__bottom">
+      <div class="footer__copy">©2020 Все права защищены.</div>
+      <div class="footer__social social-footer">
+        <a href="#" class="social-footer__item">
+          <img src="./img/soc01.png" alt="" />
+        </a>
+        <a href="#" class="social-footer__item">
+          <img src="./img/soc02.png" alt="" />
+        </a>
+        <a href="#" class="social-footer__item">
+          <img src="./img/soc03.png" alt="" />
+        </a>
+        <a href="#" class="social-footer__item">
+          <img src="./img/soc04.png" alt="" />
+        </a>
+      </div>
+    </div>
+  </div>
+</footer>
