--- a/#sources/index.html
+++ b/#sources/index.html
@@ -8,6 +8,18 @@
     />
     <title>Logo</title>
     <link
+      rel="preload"
+      href="https://unpkg.com/swiper/swiper-bundle.min.css"
+      as="style"
+    />
+    <link rel="preload" href="./css/styles.min.css" as="style" />
+    <link
+      rel="preload"
+      href="https://unpkg.com/swiper/swiper-bundle.min.js"
+      as="script"
+    />
+    <link rel="preload" href="./js/script.min.js" as="script" />
+    <link
       rel="stylesheet"
       href="https://unpkg.com/swiper/swiper-bundle.min.css"
     />
