--- a/#sources/_footer.html
+++ b/#sources/_footer.html
@@ -4,7 +4,7 @@
       <div class="footer__column">
         <div class="footer__block block-footer">
           <div class="block-footer__column">
-            <a href="#" class="logo-footer">
+            <a href="index.html" class="logo-footer">
               <img src="./img/flogo.png" alt="" />
             </a>
             <div class="block-footer__phones">
