--- a/#sources/index.html
+++ b/#sources/index.html
@@ -412,7 +412,7 @@
             </div>
           </aside>
           <div class="page__content">
-            <form action="#" class="page__search search-page">
+            <form action="catalog.html" class="page__search search-page">
               <div class="search-page__select">
                 <div class="search-page__title">
                   <span>Везде</span
