--- a/#sources/_header.html
+++ b/#sources/_header.html
@@ -21,7 +21,7 @@
         </div>
       </div>
       <div class="top-header__column top-header__column--logo">
-        <a href="#" class="top-header__logo">
+        <a href="index.html" class="top-header__logo">
           <img src="./img/logo.png" alt="" />
         </a>
       </div>
