--- a/#sources/index.html
+++ b/#sources/index.html
@@ -880,9 +880,12 @@
                             </div>
                           </div>
                           <div class="item-product__hover hover-item-product">
-                            <div class="hover-item-product__title">
+                            <a
+                              href="product.html"
+                              class="hover-item-product__title"
+                            >
                               <span>BH Fitness F1 G6414V</span>Беговая дорожка
-                            </div>
+                            </a>
                             <div
                               class="hover-item-product__options options-item-product"
                             >
@@ -947,9 +950,12 @@
                             </div>
                           </div>
                           <div class="item-product__hover hover-item-product">
-                            <div class="hover-item-product__title">
+                            <a
+                              href="product.html"
+                              class="hover-item-product__title"
+                            >
                               <span>BH Fitness F1 G6414V</span>Беговая дорожка
-                            </div>
+                            </a>
                             <div
                               class="hover-item-product__options options-item-product"
                             >
@@ -1014,9 +1020,12 @@
                             </div>
                           </div>
                           <div class="item-product__hover hover-item-product">
-                            <div class="hover-item-product__title">
+                            <a
+                              href="product.html"
+                              class="hover-item-product__title"
+                            >
                               <span>BH Fitness F1 G6414V</span>Беговая дорожка
-                            </div>
+                            </a>
                             <div
                               class="hover-item-product__options options-item-product"
                             >
@@ -1081,9 +1090,12 @@
                             </div>
                           </div>
                           <div class="item-product__hover hover-item-product">
-                            <div class="hover-item-product__title">
+                            <a
+                              href="product.html"
+                              class="hover-item-product__title"
+                            >
                               <span>BH Fitness F1 G6414V</span>Беговая дорожка
-                            </div>
+                            </a>
                             <div
                               class="hover-item-product__options options-item-product"
                             >
@@ -1148,9 +1160,12 @@
                             </div>
                           </div>
                           <div class="item-product__hover hover-item-product">
-                            <div class="hover-item-product__title">
+                            <a
+                              href="product.html"
+                              class="hover-item-product__title"
+                            >
                               <span>BH Fitness F1 G6414V</span>Беговая дорожка
-                            </div>
+                            </a>
                             <div
                               class="hover-item-product__options options-item-product"
                             >
@@ -1215,9 +1230,12 @@
                             </div>
                           </div>
                           <div class="item-product__hover hover-item-product">
-                            <div class="hover-item-product__title">
+                            <a
+                              href="product.html"
+                              class="hover-item-product__title"
+                            >
                               <span>BH Fitness F1 G6414V</span>Беговая дорожка
-                            </div>
+                            </a>
                             <div
                               class="hover-item-product__options options-item-product"
                             >
