--- a/#sources/catalog.html
+++ b/#sources/catalog.html
@@ -1063,7 +1063,7 @@
             <nav class="breadcrumbs">
               <ul class="breadcrumbs__list">
                 <li>
-                  <a href="#" class="breadcrumbs__link">Главная</a>
+                  <a href="index.html" class="breadcrumbs__link">Главная</a>
                 </li>
                 <li>
                   <span class="breadcrumbs__item">Каталог товаров</span>
