--- a/#sources/_header.html
+++ b/#sources/_header.html
@@ -88,7 +88,7 @@
             </div>
           </div>
           <div class="info-header__column _c3">
-            <a href="#" class="info-header__cart">
+            <a href="checkout.html" class="info-header__cart">
               <span>12</span>
             </a>
           </div>
